--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1916406'>Job Application for Senior Security Analyst at Omada Health</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -95,7 +99,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -168,7 +172,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280399-cloud-security-engineer'>MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280399-cloud-security-engineer'>MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Alexandria, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -192,7 +196,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prominentedge/26f57f3b-643e-4e91-bdbd-7b99a6ccb39d'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/26f57f3b-643e-4e91-bdbd-7b99a6ccb39d'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -265,7 +269,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
 months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
+<h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
 vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
@@ -274,7 +278,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -350,7 +354,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -436,12 +440,6 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
-      Systems Security Engineer (w/m/d) - CYRES Consulting Services GmbH
-    </a></h5> 
-<p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
